# markov-bot

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/config/: mod.rs
src/db/: mod.rs
src/markov/: constants.rs  mod.rs  types.rs  utils.rs
