[package]
name = "markov_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
futures = "0.3"
log = "0.4"
mongodb = "2.2.1"
pretty_env_logger = "0.4"
rand = "0.8.5"
serde = { version = "1.0.137", features = ["derive"] }
simple-telegram-bot = { git = "https://github.com/unpollito/simple-telegram-bot", rev = "74a96631" }
tokio = { version = "1.18.2", features = ["full"] }